# university_credit_management

./: .gitignore  16KB_PAGE_SIZE_EVIDENCE.md  16KB_PAGE_SIZE_SUPPORT.md  ALERTDIALOG_COLOR_FIX_SUMMARY.md  APPBAR_COLOR_FIX_SUMMARY.md  APPBAR_ICONS_FIX_SUMMARY.md  COMPLETION_SUMMARY.md  DAILY_PROGRESS_2025-09-30.md  DEVELOPMENT_ROADMAP.md  ELEVATEDBUTTON_COLOR_FIX_SUMMARY.md  NAVIGATION_FIX_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_PROGRESS_REPORT.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PROJECT_BLUEPRINT.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  ROUTER_LOGGING_SUMMARY.md  SECTION_UPDATES_SUMMARY.md  TITLE_COLOR_FIX_SUMMARY.md  app.md  check_16kb_support.sh  fix_16kb_alignment.sh  flutter_native_splash.yaml  pubspec.yaml  test_16kb_pages.sh
AppIcon/: ChatGPT Image May 6, 2025, 05_13_18 PM.jp2
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/cpp/: CMakeLists.txt
grad_tracker/: README.md  pubspec.yaml
grad_tracker/android/: local.properties
grad_tracker/lib/: main.dart
grad_tracker/linux/: CMakeLists.txt
grad_tracker/test/: widget_test.dart
grad_tracker/web/: index.html
grad_tracker/windows/: CMakeLists.txt
ios/Runner.xcodeproj/: project.pbxproj
key/: 052Keystore.jks  key.rtf
lib/: main.dart
linux/: CMakeLists.txt
test/: gpa_service_test.dart  progress_model_test.dart  widget_test.dart
web/: index.html  manifest.json
web_source/: .firebaserc  README.md  app-ads.txt  index.html  policy.html  style.css  support.html
windows/: CMakeLists.txt
(+138 files in other folders)
